--- a/src/components/Footer/index.css
+++ b/src/components/Footer/index.css
@@ -7,3 +7,8 @@
   font-family: 'Roboto';
   margin-bottom: 15px;
 }
+@media screen and (max-width: 576px) {
+  .footer-container {
+    font-size: 10px;
+  }
+}
